--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- cek -->
 <html lang="en">
 	<head>
-	  <title>~Arvenvia~</title>
+	  <title>Happy Anniv 2 Tahun Kita!</title>
 	  <meta charset="utf-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -368,6 +368,18 @@
 				<p id="quotation"></p>
 				<p id="source"></p>
 			</div>
+			<button type="button" class="btn btn-primary btn-lg btn-block"><a href="counter.html">Udah Berapa Lama Sich?</a></button>
+			<style>
+				a{
+					text-decoration: none;
+					color: white;
+				}
+				a:hover{
+					text-decoration: none;
+					color: white;
+				}
+			</style>
+			<!-- <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Primary link</a> -->
 			<ul class="kotak">
 				<li></li>
 				<li></li>
@@ -866,19 +878,19 @@
 				S=s;
 
 				if (H<3){
-					txt='Kok belum tidur?';
+					txt='Kok belum tidur si Neb?';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
 				}
 				else if(H<9){
-					txt='Morning, Arvenvia!';
+					txt='Good Morning Neb :)';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
 				}
 				else if(H<12){
-					txt='Have a nice day!';
+					txt='Jangan lupa mandi yaa, dah jam segini';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
@@ -896,7 +908,7 @@
 					txt2=txt;
 				}
 				else if(H<=24){
-					txt='Time to Sleep, Good Night, Have a nice dream  :*';
+					txt='Bobok Yukk meng, Have a nice dream  :*';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
@@ -965,51 +977,51 @@
 
 			const quotes = [
 			  {
-			    "quote": "Kalau mau lihat horizon yang lebih luas, kita butuh tempat yang lebih tinggi",
+			    "quote": "Loh, udah 2 taun? Perasaan baru kemaren aku ngasih coklat murah buat nembak mwehehehe",
 			    "source": "---"
 			  },
 			  {
-			    "quote": "Hidup itu lucu, yang dicari hilang, yang dikejar lari, yang ditunggu pergi.",
+			    "quote": "Kadang kalo lagi sama kamu suka lupa waktu ihh",
 			    "source": "---"
 			  },
 			  {
-			    "quote": "Sampai hari kita lelah dan berserah, saat itu semesta bekerja",
+			    "quote": "Kalo Kamu lelah, pusing, capek, inget dong kan ada aku buat cerita semua",
 			    "source": "---"
 			  },
 			  {
-			    "quote": "Nggak semua harus ada jawabannya sekarang.",
+			    "quote": "Semangat!! Jangan gampang nyerah yaa",
 			    "source": "---"
 			  },
 			  {
-			    "quote": "Bumi gak hanya berputar buat kita, jadi jangan egois.",
+			    "quote": "Hari cuma 24 Jam tapi kok rasanya aku pengen ada 25 jam bareng kamu dalam sehari :(",
 			    "source": "---"
 			  },
 			  {
-			    "quote": "Bahagia itu tanggung jawab masing-masing.",
+			    "quote": "Yuk Bareng2 kita cari si \"Bahagia\"Kalo dah ketemua hayuk kita rawat bareng-bareng" ,
 			    "source": "---"
 			  },
 			  {
-			    "quote": "Nyaman itu memang kadang jadi jebakan. Bikin takut ke mana-mana. Bikin nggak siap sama gagal.",
+			    "quote": "Jangan suka marah-marah :( Sedihhh. Apalagi kalo gatau sebabnya",
 			    "source": "---"
 			  },
 			  {
-			    "quote": "Marah itu wajar, tapi jangan sampai marah jadi satu-satunya alasan untuk bertindak",
+			    "quote": "Pernah ga kangen tiba2 gitu? :(",
 			    "source": "---"
 			  },
 			  {
-			    "quote": "Arah mata angin nggak bisa diatur, tapi arah layar bisa",
+			    "quote": "Hayu bareng-bareng berproses. Saling menguatkan. Saling support!",
 			    "source": "---"
 			  },
 			  {
-			    "quote": "Sabar, satu per satu",
+			    "quote": "Sabar, satu per satu. Hasil yang luar biasa berawal dari coretan kecil",
 			    "source": "---"
 			  },
 			  {
-			    "quote": "Jangan mudah tersinggung, di bumi,bukan cuma kamu yang punya perasaan",
+			    "quote": "HEY YOU! @#!@%#$%$#%$%^ I LOVE U",
 			    "source": "---"
 			  },
 			  {
-			    "quote": "Seperti banyak mimpi yang digantung hingga pagi ini, ada yang gagal, hilang, bahkan terlupakan",
+			    "quote": "Ehehehe Lagi pengen disayang :*",
 			    "source": "---"
 },
 			]
