--- a/counter.html
+++ b/counter.html
@@ -57,9 +57,11 @@
     </script>
     <style>
     *{
+        transition: 0.5s;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
     h1{
+        margin-top: 50px;
         text-align: center;
         padding: 40px;
     }
@@ -84,14 +86,31 @@
         color: black;
     }
     a{
+        transition: 0.5s;
         text-decoration: none;
-        color: white;
+        color: black;
     }
     a:hover{
+        transition: 0.5s;   
         text-decoration: none;
         color: white;
     }
+    @media all and (max-width: 1000px) {
+        .countup .timeel {
+        display: inline-block;
+        padding: 5px;
+        background: #151515;
+        margin: 0;
+        color: white;
+        min-width: 2.6rem;
+        margin-left: 13px;
+        border-radius: 10px 0 0 10px;
+    }
+        .countup{
+            font-size: 10px;
+        }
+    }
     </style>
-    <button type="button" class="btn btn-primary btn-lg btn-block"><a href="index.html">Balik</a></button>
+    <button type="button" class="btn btn-outline-primary btn-lg btn-block"><a href="index.html">Balik</a></button>
 </body>
 </html>
