--- a/index.html
+++ b/index.html
@@ -368,18 +368,24 @@
 				<p id="quotation"></p>
 				<p id="source"></p>
 			</div>
-			<button type="button" class="btn btn-primary btn-lg btn-block"><a href="counter.html">Udah Berapa Lama Sich?</a></button>
+			<button type="button" class="btn btn-outline-primary btn-lg btn-block"><a href="counter.html">Udah Berapa Lama Sich?</a></button>
 			<style>
+				*{
+					transition: 0.5s;
+				}
 				a{
+					transition: 0.5s;
 					text-decoration: none;
-					color: white;
+					color: black;
 				}
 				a:hover{
+					transition: 0.5s;
 					text-decoration: none;
 					color: white;
 				}
 			</style>
 			<!-- <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Primary link</a> -->
+
 			<ul class="kotak">
 				<li></li>
 				<li></li>
